<resources>
    <string name="app_name">Ejemplos Tema 2</string>
    <string name="app_author">Juan Carlos Cuevas Martínez</string>
    <string name="app_affiliaton">Dpto. Ingeniería de Telecomunicación\nUniversidad de Jaén</string>

    <string name="app_help">Ayuda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navbar_serviciosmoviles">Servicios Móviles</string>
    <string name="navbar_title">Ejemplos Tema 3</string>
    <string name="navbar_section_info">Información</string>
    <string name="navmenu_help">Ayuda</string>
    <string name="navmenu_about">Acerca de…</string>
    <string name="nav_bluetooth_title">Ejemplo de Bluetooth</string>
    <string name="nav_wifi_title">Ejemplo sobre WIFI</string>
    <string name="action_help">Ayuda</string>

    <string name="contentdescription_logouja">Logo UJA</string>

    <string name="help_title">Ayuda de la aplicación de ejemplos</string>
    <string name="help_text">Esta es una aplicación para mostrar los ejemplos de clase de la asignatura Servicios Móviles del Grado de Ingeniería Telemática de la Universidad de Jaén</string>


    <string name="fragment_bt_error_nobt">El dispositivo no tiene una interfaz BlueTooth</string>
    <string name="fragment_bt_error_user">No se ha activado la interfaz Bluetooth</string>
    <string name="fragment_bt_title">Búsqueda de dispositivos BlueTooth</string>
    <string name="fragment_bt_nodevice">El dispositivo no está disponible</string>
    <string name="fragment_bt_pairing">Emparejando con </string>
    <string name="fragment_bt_closing">Cerrando conexión con</string>
    <string name="fragment_bt_search">Buscar</string>
    <string name="fragment_bt_discovering">Calma, aún estoy mirando…</string>

    <string name="bluetooth_server_start">Iniciar servidor</string>
    <string name="bluetooth_server_stop">Parar servidor</string>
    <string name="bluetooth_send">Enviar</string>
    <string name="bluetooth_search_start">Iniciando búsqueda</string>
    <string name="bluetooth_search_end">Búsqueda finalizada</string>


    <string name="connectivity_scan">Buscar</string>
    <string name="connectivity_result">resultado&#8230;</string>
    <string name="connectivity_code_startscan">Buscando wifi&#8230;</string>
    <string name="menu_connectivity_description">En este ejemplo se mostrará una lista con las redes wifi que están registradas en el dispositivo, así como posibilitar un escaneo de las redes wifi dentro del alcance.</string>
    <string name="menu_connectivity_networking">En este ejemplo se muestran diferentes formas de conexión a un recurso remoto, como a través de la clase HttpUrlConnection, sockets. Se muestra también la forma de crear tareas asíncronas y un ejemplo de Servicio</string>
    <string name="connectivity_netlist">Lista de redes almacenada en el dispositivo</string>
    <string name="wifipower_ssid">SSID</string>
    <string name="wifipower_dbm">dBm</string>
    <string name="connectivity_search">Buscar redes</string>
    <string name="wifipower_hz">Hz</string>
    <string name="bluetooth_hint_send">Mensaje a enviar</string>

    <!-- NFC-->
    <string name="contentdescription_ujalogo">Universidad de Jaén</string>
    <string name="nfcabout_author">Autor: Juan Carlos Cuevas Martínez</string>
    <string name="hello_world">Los datos saldrá aquí</string>
    <string name="menu_main_about">Acerca de NFCTest</string>
    <string name="menu_main_aboutc">Acerca de</string>
    <string name="nfcmain_tagdetected">Etiqueta NFC detectada</string>
    <string name="nfcmain_welcome">Bienvenido a la aplicación de test para NFC</string>
    <string name="nfctastabout_about">NFCTest v1.0. Esta aplicación es parte del material docente de la asignatura de Servicios Móviles del Grado de Ingeniería Telemática de la Universidad de Jaén.</string>
    <string name="nfctestabout_textview_footer">Departamento de Ingeniería de Telecomunicación</string>
    <string name="nav_nfc_title">NFC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nfcfragment_title">Empleo de NFC</string>
    <string name="nefcfragment_text">Acerque una etiqueta NFC</string>
</resources>
