<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_menu_bluetooth"
            android:title="@string/nav_bluetooth_title" />
        <item
            android:id="@+id/nav_wifipower"
            android:icon="@drawable/ic_menu_wifi"
            android:title="@string/nav_wifi_title" />
        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/ic_menu_nfc"
            android:title="@string/nav_nfc_title" />

    </group>

    <item android:title="@string/navbar_section_info">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/navmenu_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/navmenu_about" />
        </menu>
    </item>

</menu>
