<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_acercade_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/shape_background"
    android:padding="20dp"
    tools:context="es.ujaen.ejemplostema2.FragmentoAcercade">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/contentdescription_logouja"
        app:srcCompat="@drawable/ic_uja" />

    <TextView
        android:id="@+id/fragment_acercade_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <TextView
        android:id="@+id/fragment_acercade_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_acercade_helptext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:text="@string/app_author"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:id="@+id/fragment_acercade_afiliacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_acercade_author"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/app_affiliaton"
        tools:text="@string/app_affiliaton" />

    <TextView
        android:id="@+id/fragment_acercade_helptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragment_acercade_titulo"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/help_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</RelativeLayout>
