<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.ujaen.ejemplostema3.ActivityBluetooth">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_bt_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingEnd="@dimen/fragment_horizontal_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingStart="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:textColor="@android:color/background_light"
        android:id="@+id/bluetooth_title" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/bluetooth_list"
        android:layout_above="@+id/bluetooth_send"
        android:layout_below="@+id/bluetooth_search" />

    <Button
        android:text="@string/bluetooth_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetooth_send"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:text="@string/fragment_bt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/bluetooth_search"
        android:onClick="onSearch"
        android:layout_below="@+id/bluetooth_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/bluetooth_server_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetooth_server"
        android:layout_above="@+id/bluetooth_list"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/bluetooth_text"
        android:inputType="text"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/bluetooth_send"
        android:layout_toStartOf="@+id/bluetooth_send" />


</RelativeLayout>
