<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.ujaen.ejemplostema2.ActivityBluetooth">

    <TextView
        android:id="@+id/bluetooth_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingEnd="@dimen/fragment_horizontal_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingStart="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:text="@string/fragment_bt_title"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/bluetooth_search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bluetooth_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <requestFocus />

    <Button
        android:id="@+id/bluetooth_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_server_start"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/bluetooth_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/bluetooth_hint_send"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bluetooth_send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bluetooth_send"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bluetooth_search"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:onClick="onSearch"
        android:text="@string/fragment_bt_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bluetooth_title"
        app:layout_constraintTop_toTopOf="@+id/bluetooth_title"
        android:layout_marginRight="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="262dp" />

    <ListView
        android:id="@+id/bluetooth_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_search" />

    <ScrollView
        android:id="@+id/bluetooth_scrooll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/side_nav_bar"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/bluetooth_server"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.6">
    <TextView
        android:id="@+id/bluetooth_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     />
</ScrollView>

</android.support.constraint.ConstraintLayout>
