<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls" >
    <TextView
        android:id="@+id/connectivity_textView_foot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/connectivity_textView_foot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/connectivity_textview_netlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connectivity_netlist"
                android:background="@color/colorPrimaryDark"
                android:padding="@dimen/very_small_padding" />

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/very_small_padding">

                <TextView
                    android:id="@+id/connectivity_textView_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="always"
                    android:scrollbars="vertical"
                    android:text="@string/connectivity_result"
                    />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/FrameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="@dimen/very_small_padding">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connectivity_search"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:id="@+id/connectivity_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:contentDescription="@string/connectivity_scan"
                    android:onClick="onScan"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_wifi" />
            </FrameLayout>

            <ScrollView
                android:id="@+id/connectivity_wifipower_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccentLight"
                android:padding="@dimen/very_small_padding">

                <TableLayout
                    android:id="@+id/connectivity_wifipower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </TableLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>